// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`button [snapshot] > disabled 1`] = `
<button
  class="vesper-button vesper-button-md vesper-button-disabled"
  disabled=""
>
  Button Text
</button>
`;

exports[`button [snapshot] > size: lg 1`] = `
<button
  class="vesper-button vesper-button-lg vesper-button-contrast"
>
  Button Text
</button>
`;

exports[`button [snapshot] > size: md 1`] = `
<button
  class="vesper-button vesper-button-md vesper-button-contrast"
>
  Button Text
</button>
`;

exports[`button [snapshot] > size: sm 1`] = `
<button
  class="vesper-button vesper-button-sm vesper-button-contrast"
>
  Button Text
</button>
`;

exports[`button [snapshot] > size: xs 1`] = `
<button
  class="vesper-button vesper-button-xs vesper-button-contrast"
>
  Button Text
</button>
`;

exports[`button [snapshot] > variant: contrast 1`] = `
<button
  class="vesper-button vesper-button-md vesper-button-contrast"
>
  Button Text
</button>
`;

exports[`button [snapshot] > variant: danger 1`] = `
<button
  class="vesper-button vesper-button-md vesper-button-danger"
>
  Button Text
</button>
`;

exports[`button [snapshot] > variant: ghost 1`] = `
<button
  class="vesper-button vesper-button-md vesper-button-ghost"
>
  Button Text
</button>
`;

exports[`button [snapshot] > variant: primary 1`] = `
<button
  class="vesper-button vesper-button-md vesper-button-primary"
>
  Button Text
</button>
`;

exports[`button [snapshot] > variant: subtle 1`] = `
<button
  class="vesper-button vesper-button-md vesper-button-subtle"
>
  Button Text
</button>
`;

exports[`button [snapshot] > variant: tertiary 1`] = `
<button
  class="vesper-button vesper-button-md vesper-button-tertiary"
>
  Button Text
</button>
`;

exports[`button [snapshot] > variant: warning 1`] = `
<button
  class="vesper-button vesper-button-md vesper-button-warning"
>
  Button Text
</button>
`;
